--- a/content.html
+++ b/content.html
@@ -5,17 +5,47 @@
 
 <!-- navigation breadcrumbs -->
 {if isset($breadcrumbs)}
-<div class="breadcrumb">
-    <a href="{$wa_app_url}">{$wa->accountName()}</a>
-    {if $breadcrumbs}
-    {foreach $breadcrumbs as $breadcrumb}
-    » <a href="{$breadcrumb.url}">{$breadcrumb.name|escape}</a>
-    {/foreach}
-    {else} » {/if}
-</div>
+    <div class="breadcrumb">
+        <a href="{$wa_app_url}">{$wa->accountName()}</a>
+        {if $breadcrumbs}
+            {foreach $breadcrumbs as $breadcrumb}
+                » <a href="{$breadcrumb.url}">{$breadcrumb.name|escape}</a>
+            {/foreach}
+        {else} » {/if}
+    </div>
 {/if}
 
 
 <!-- current page core content -->
 {$content}
 
+
+<script type="text/javascript" src="{$wa_url}wa-content/js/jquery-plugins/jquery.tmpl.min.js"></script>
+{literal}
+    <script id="cart_block_list_item_tmpl" type="text/x-jquery-tmpl">
+        <tr data-id="${id}">
+            <td class="image">			
+                <a href="${url}">
+                    <img src="${img}" alt="${name}" /> 
+                </a>
+            </td>
+            <td class="name">
+                <a href="${url}">${name}</a><br>
+                <span class="quantity">x&nbsp;<span>${quantity}</span></span>
+                <span class="total">{{html price}}</span>
+                <div class="remove"><span><i class="fa fa-times-circle"></i>{/literal}[`Remove`]{literal}</span></div>
+            </td>
+        </tr>
+    </script>
+{/literal}
+<div id="dialog" class="dialog">
+    <div class="dialog-background"></div>
+    <div class="dialog-window">
+        <!-- common part -->
+        <div class="cart">
+
+        </div>
+        <!-- /common part -->
+
+    </div>
+</div>
