--- a/product.cart.html
+++ b/product.cart.html
@@ -1,137 +1,143 @@
 <form id="cart-form{if $wa->get('cart')}-dialog{/if}" method="post" action="{$wa->getUrl('/frontendCart/add')}">
+    <div class="ajax_product_info" 
+         data-price="{shop_currency_html($product.price)|escape}"
+         data-name="{$product.name|escape}" 
+         data-url="{$wa->shop->productUrl($product)}" 
+         data-img="{shopImage::getUrl(['id' => $product.image_id, 'product_id' => $product.id, 'ext' => $product.ext, 'default' => "`$wa_theme_url`img/dummy200.png"], '80x80', false)}"
+         ></div>
     <div class="product-section">
         {if $product.sku_type}
 
-            <!-- SELECTABLE FEATURES selling mode -->
-            {$default_sku_features = $product.sku_features}
-            {$product_available = $product.status}
-            <div class="options">
-                {foreach $features_selectable as $f}
-                    {$f.name}:
-                    <select data-feature-id="{$f.id}" class="sku-feature" name="features[{$f.id}]">
-                        {foreach $f.values as $v_id => $v}
-                            <option value="{$v_id}" {if $v_id == ifset($default_sku_features[$f.id])}selected{/if}>{$v}</option>
-                        {/foreach}
-                    </select>
-                    <br>
+        <!-- SELECTABLE FEATURES selling mode -->
+        {$default_sku_features = $product.sku_features}
+        {$product_available = $product.status}
+        <div class="options">
+            {foreach $features_selectable as $f}
+            {$f.name}:
+            <select data-feature-id="{$f.id}" class="sku-feature" name="features[{$f.id}]">
+                {foreach $f.values as $v_id => $v}
+                <option value="{$v_id}" {if $v_id == ifset($default_sku_features[$f.id])}selected{/if}>{$v}</option>
                 {/foreach}
-            </div>
+            </select>
+            <br>
+            {/foreach}
+        </div>
         {else}
 
-            <!-- FLAT SKU LIST selling mode -->
-            {$product_available = false}
-            {if count($product.skus) > 1}
+        <!-- FLAT SKU LIST selling mode -->
+        {$product_available = false}
+        {if count($product.skus) > 1}
 
-                {* SKU selector *}
+        {* SKU selector *}
 
-                <ul class="skus">
-                    {foreach $product.skus as $sku}
-                        {$sku_available =  $product.status && $sku.available && ($wa->shop->settings('ignore_stock_count') || $sku.count === null || $sku.count > 0)}
-                        <li itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                            <label{if !$sku.available} class="disabled"{/if}>
-                                <input name="sku_id" type="radio" value="{$sku.id}"{if !$sku.available} disabled="true"{/if}{if !$sku_available}data-disabled="1"{/if}{if $sku.id == $product.sku_id} checked="checked"{/if} data-compare-price="{shop_currency($sku.compare_price, $product.currency, null, 0)}" data-price="{shop_currency($sku.price, $product.currency, null, 0)}"{if $sku.image_id} data-image-id="{$sku.image_id}"{/if}> <span itemprop="name">{$sku.name|escape}</span>
-                                {if $sku.sku}<span class="hint" itemprop="name">{$sku.sku|escape}</span>{/if}
-                                <meta itemprop="price" content="{shop_currency($sku.price, $product.currency)}">
-                                <span class="price tiny nowrap">{shop_currency_html($sku.price, $product.currency)}</span>
-                                {if (!($sku.count === null) && $sku.count <= 0)}
-                                    <link itemprop="availability" href="http://schema.org/OutOfStock" />
-                                {else}
-                                    <link itemprop="availability" href="http://schema.org/InStock" />
-                                {/if}
-                            </label>
-                        </li>
-                        {$product_available = $product_available or $sku_available}
-                    {/foreach}
-                </ul>
-            {else}
-
-                {* in case there is only one SKU, don't display the selector *}
-
-                <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                    {$sku = $product.skus[$product.sku_id]}
+        <ul class="skus">
+            {foreach $product.skus as $sku}
+            {$sku_available =  $product.status && $sku.available && ($wa->shop->settings('ignore_stock_count') || $sku.count === null || $sku.count > 0)}
+            <li itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                <label{if !$sku.available} class="disabled"{/if}>
+                    <input name="sku_id" type="radio" value="{$sku.id}"{if !$sku.available} disabled="true"{/if}{if !$sku_available}data-disabled="1"{/if}{if $sku.id == $product.sku_id} checked="checked"{/if} data-compare-price="{shop_currency($sku.compare_price, $product.currency, null, 0)}" data-price="{shop_currency($sku.price, $product.currency, null, 0)}"{if $sku.image_id} data-image-id="{$sku.image_id}"{/if}> <span itemprop="name">{$sku.name|escape}</span>
                     {if $sku.sku}<span class="hint" itemprop="name">{$sku.sku|escape}</span>{/if}
                     <meta itemprop="price" content="{shop_currency($sku.price, $product.currency)}">
-                    {if !$sku.available}
-                        <link itemprop="availability" href="http://schema.org/Discontinued" />
-                        <p><em class="bold error">[`This product is not available for purchase`]</em></p>
-                    {elseif !$wa->shop->settings('ignore_stock_count') && !($sku.count === null || $sku.count > 0)}
-                        <link itemprop="availability" href="http://schema.org/OutOfStock" />
-                        <div class="stocks"><strong class="stock-none"><i class="icon16 stock-transparent"></i>{if $wa->shop->settings('ignore_stock_count')}[`Pre-order only`]{else}[`Out of stock`]{/if}</strong></div>
+                    <span class="price tiny nowrap">{shop_currency_html($sku.price, $product.currency)}</span>
+                    {if (!($sku.count === null) && $sku.count <= 0)}
+                    <link itemprop="availability" href="http://schema.org/OutOfStock" />
                     {else}
-                        <link itemprop="availability" href="http://schema.org/InStock" />
+                    <link itemprop="availability" href="http://schema.org/InStock" />
                     {/if}
-                    <input name="sku_id" type="hidden" value="{$product.sku_id}">
-                    {$product_available = $product.status && $sku.available && ($wa->shop->settings('ignore_stock_count') || $sku.count === null || $sku.count > 0)}
-                </div>
+                </label>
+            </li>
+            {$product_available = $product_available or $sku_available}
+            {/foreach}
+        </ul>
+        {else}
 
+        {* in case there is only one SKU, don't display the selector *}
+
+        <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+            {$sku = $product.skus[$product.sku_id]}
+            {if $sku.sku}<span class="hint" itemprop="name">{$sku.sku|escape}</span>{/if}
+            <meta itemprop="price" content="{shop_currency($sku.price, $product.currency)}">
+            {if !$sku.available}
+            <link itemprop="availability" href="http://schema.org/Discontinued" />
+            <p><em class="bold error">[`This product is not available for purchase`]</em></p>
+            {elseif !$wa->shop->settings('ignore_stock_count') && !($sku.count === null || $sku.count > 0)}
+            <link itemprop="availability" href="http://schema.org/OutOfStock" />
+            <div class="stocks"><strong class="stock-none"><i class="icon16 stock-transparent"></i>{if $wa->shop->settings('ignore_stock_count')}[`Pre-order only`]{else}[`Out of stock`]{/if}</strong></div>
+            {else}
+            <link itemprop="availability" href="http://schema.org/InStock" />
             {/if}
+            <input name="sku_id" type="hidden" value="{$product.sku_id}">
+            {$product_available = $product.status && $sku.available && ($wa->shop->settings('ignore_stock_count') || $sku.count === null || $sku.count > 0)}
+        </div>
+
+        {/if}
 
         {/if}
         <!-- stock info -->
         {if $product_available || count($product.skus) > 1}
-            <div class="stocks">
-                {function name=in_stock n=0 low=5 critical=2}
-                    {if $n > $low or $n === null}
-                        <strong class="stock-high"><i class="icon16 stock-green"></i>[`In stock`]</strong>
-                    {elseif $n > $critical}
-                        <strong class="stock-low"><i class="icon16 stock-yellow"></i>{_w("Only %d left in stock", "Only %d left in stock", $n)}</strong>
-                        {elseif $n > 0}
-                        <strong class="stock-critical"><i class="icon16 stock-red"></i>{_w("Only %d left in stock", "Only %d left in stock", $n)}</strong>
-                        {else}
-                        <strong class="stock-none"><i class="icon16 stock-transparent"></i>{if $wa->shop->settings('ignore_stock_count')}[`Pre-order only`]{else}[`Out of stock`]{/if}</strong>
-                    {/if}
-                {/function}
-                {foreach $product.skus as $sku}
-                    <div {if $sku.id != $product.sku_id}style="display:none"{/if} class="sku-{$sku.id}-stock">
-                        {if $sku.stock}
-                            {foreach $stocks as $stock_id => $stock}
-                                {if isset($sku.stock[$stock_id])}
-                                    {$stock_count = $sku.stock[$stock_id]}
-                                {else}
-                                    {$stock_count = null}
-                                {/if}
-                                {$stock.name}: {in_stock n=$stock_count low=$stock.low_count critical=$stock.critical_count}<br>
-                            {/foreach}
-                        {else}
-                            {in_stock n=$sku.count}
-                        {/if}
-                    </div>
+        <div class="stocks">
+            {function name=in_stock n=0 low=5 critical=2}
+            {if $n > $low or $n === null}
+            <strong class="stock-high"><i class="icon16 stock-green"></i>[`In stock`]</strong>
+            {elseif $n > $critical}
+            <strong class="stock-low"><i class="icon16 stock-yellow"></i>{_w("Only %d left in stock", "Only %d left in stock", $n)}</strong>
+            {elseif $n > 0}
+            <strong class="stock-critical"><i class="icon16 stock-red"></i>{_w("Only %d left in stock", "Only %d left in stock", $n)}</strong>
+            {else}
+            <strong class="stock-none"><i class="icon16 stock-transparent"></i>{if $wa->shop->settings('ignore_stock_count')}[`Pre-order only`]{else}[`Out of stock`]{/if}</strong>
+            {/if}
+            {/function}
+            {foreach $product.skus as $sku}
+            <div {if $sku.id != $product.sku_id}style="display:none"{/if} class="sku-{$sku.id}-stock">
+                {if $sku.stock}
+                {foreach $stocks as $stock_id => $stock}
+                {if isset($sku.stock[$stock_id])}
+                {$stock_count = $sku.stock[$stock_id]}
+                {else}
+                {$stock_count = null}
+                {/if}
+                {$stock.name}: {in_stock n=$stock_count low=$stock.low_count critical=$stock.critical_count}<br>
                 {/foreach}
-                {if $product.sku_type}
-                    <div class="sku-no-stock">
-                        <strong class="stock-none">[`Product with the selected option combination is not available for purchase`]</strong>
-                    </div>
+                {else}
+                {in_stock n=$sku.count}
                 {/if}
             </div>
+            {/foreach}
+            {if $product.sku_type}
+            <div class="sku-no-stock">
+                <strong class="stock-none">[`Product with the selected option combination is not available for purchase`]</strong>
+            </div>
+            {/if}
+        </div>
         {/if}
 
         {if $services}
-            <!-- services -->
-            <div class="services">
-                {foreach $services as $s}
-                    <div class="service-{$s.id}">
-                        <label>
-                            <input data-price="{shop_currency($s.price, $s.currency, null, 0)}" {if !$product_available}disabled="disabled"{/if} type="checkbox" name="services[]" value="{$s.id}"> {$s.name|escape} {if $s.price && !isset($s.variants)}(+<span class="service-price">{shop_currency_html($s.price, $s.currency)}</span>){/if}
-                        </label>
-                        {if isset($s.variants)}
-                            <select data-variant-id="{$s.variant_id}" class="service-variants" name="service_variant[{$s.id}]" disabled>
-                                {foreach $s.variants as $v}
-                                    <option {if $s.variant_id == $v.id}selected{/if} data-price="{shop_currency($v.price, $s.currency, null, 0)}" value="{$v.id}">{$v.name|escape} (+{shop_currency($v.price, $s.currency)})</option>
-                                {/foreach}
-                            </select>
-                        {else}
-                            <input type="hidden" name="service_variant[{$s.id}]" value="{$s.variant_id}">
-                        {/if}
-                    </div>
-                {/foreach}
+        <!-- services -->
+        <div class="services">
+            {foreach $services as $s}
+            <div class="service-{$s.id}">
+                <label>
+                    <input data-price="{shop_currency($s.price, $s.currency, null, 0)}" {if !$product_available}disabled="disabled"{/if} type="checkbox" name="services[]" value="{$s.id}"> {$s.name|escape} {if $s.price && !isset($s.variants)}(+<span class="service-price">{shop_currency_html($s.price, $s.currency)}</span>){/if}
+                </label>
+                {if isset($s.variants)}
+                <select data-variant-id="{$s.variant_id}" class="service-variants" name="service_variant[{$s.id}]" disabled>
+                    {foreach $s.variants as $v}
+                    <option {if $s.variant_id == $v.id}selected{/if} data-price="{shop_currency($v.price, $s.currency, null, 0)}" value="{$v.id}">{$v.name|escape} (+{shop_currency($v.price, $s.currency)})</option>
+                    {/foreach}
+                </select>
+                {else}
+                <input type="hidden" name="service_variant[{$s.id}]" value="{$s.variant_id}">
+                {/if}
             </div>
+            {/foreach}
+        </div>
         {/if}
     </div>
 
     <div id="prices" class="price">
         <span data-price="{shop_currency($product.price, null, null, 0)}" class="price-new">{shop_currency_html($product.price)}</span>
         {if $product.compare_price > 0}
-            <span class="price-old">{shop_currency_html($product.compare_price)}</span>
+        <span class="price-old">{shop_currency_html($product.compare_price)}</span>
         {/if}
     </div>
     <div class="cart">
@@ -164,15 +170,15 @@
 
 <script type="text/javascript" src="{$wa_theme_url}product.js?v{$wa_theme_version}"></script>
 <script type="text/javascript">
-    $(function() {
-        new Product('#cart-form{if $wa->get('cart')}-dialog{/if}', {
-        currency: {json_encode($currency_info)}
-    {if count($product.skus) > 1 or $product.sku_type}
-        , services: {json_encode($sku_services)}
-    {/if}
-    {if $product.sku_type}
-        , features: {json_encode($sku_features_selectable)}
-    {/if}
-    });
-    });
+                                    $(function() {
+                                    new Product('#cart-form{if $wa->get('cart')}-dialog{/if}', {
+                                    currency: {json_encode($currency_info)}
+                                    {if count($product.skus) > 1 or $product.sku_type}
+                                    , services: {json_encode($sku_services)}
+                                    {/if}
+                                    {if $product.sku_type}
+                                    , features: {json_encode($sku_features_selectable)}
+                                    {/if}
+                                    });
+                                    });
 </script>
